<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/boxStyle1">

            <TextView
                style="@style/questionStyle"
                android:text="@string/question1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="Gordon Shumway" />

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="Gordon Ramsey" />

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="Gordon Sumner" />
                </RadioGroup>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/sting" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/boxStyle2">

            <TextView
                style="@style/questionStyle"
                android:text="@string/question2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/imageToTheLeft"
                    android:src="@drawable/genesis" />

                <RadioGroup style="@style/radioToTheRight">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tony Banks" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Elton John" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phil Collins" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mike Rutherford" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="George Michael" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/boxStyle1">

            <TextView
                style="@style/questionStyle"
                android:text="@string/question3" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write your answer here" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/europe" />

        </LinearLayout>

        <LinearLayout style="@style/boxStyle4">

            <TextView
                style="@style/questionStyle"
                android:text="@string/question4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/imageToTheLeft"
                    android:src="@drawable/queen" />

                <RadioGroup style="@style/radioToTheRight">

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="Brian May" />

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="Freddie Mercury" />

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="John Deacon" />

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="Roger Taylor" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/boxStyle1">

            <TextView
                style="@style/questionStyle"
                android:text="@string/question5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="1982" />

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="Sexcrime (1984)" />

                    <RadioButton
                        style="@style/buttonStyle"
                        android:text="1999" />
                </RadioGroup>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/prince" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
